# new

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/api/: inspection.py
app/models/: __init__.py  inspection.py
app/schemas/: __init__.py  inspection.py
app/services/: __init__.py  inspection.py
static/: index.html
yolo/: dataset.py  download_data.py  inference.py  train.py
