[project]
name = "mine-safety-inspection"
version = "1.0.0"
description = "矿井安全检查系统 - 基于YOLOv8的明火检测与后端管理"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "sqlmodel>=0.0.14",
    "python-multipart>=0.0.6",
    "kagglehub>=0.2.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
mine-safety = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*", "yolo*"]
